--- a/index.html
+++ b/index.html
@@ -27,8 +27,78 @@
             User <br />
             Score
           </p>
-          <p class="score" id="UserScore">0</p>
+          <p class="score" id="userScore">0</p>
         </div>
+      </div>
+    </div>
+    <div class="gamebox">
+      <div class="triangleConatiner hidden">
+        <div class="outerTriangle"></div>
+        <div class="innerTriangle"></div>
+        <button class="number top" id="rock"></button>
+        <button class="number bottom-left" id="paper"></button>
+        <button class="number bottom-right" id="scissors"></button>
+      </div>
+      <div class="result-container">
+        <div class="result-box">
+          <div class="result-gen">
+            <div class="result-gen-choice">
+              <div class="result-choice" id="yourchoice">YOU PICKED</div>
+              <div class="result-choice" id="compchoice">PC PICKED</div>
+            </div>
+            <div class="animation-container">
+              <div class="pulse-animation pulse-one">
+                <div class="pulse-core core-one"></div>
+                <span class="pulse-overlay" style="--i: 1"></span>
+                <span class="pulse-overlay" style="--i: 2"></span>
+                <span class="pulse-overlay" style="--i: 3"></span>
+              </div>
+              <div class="overlay-info hidden">
+                <div class="status-message" id="status-message"></div>
+                <div class="status-submessage" id="status-submessage">
+                  AGAINST PC
+                </div>
+                <div>
+                  <button class="play-again-button" id="play-again-button">
+                    Play Again
+                  </button>
+                </div>
+              </div>
+              <div class="pulse-animation pulse-two">
+                <div class="pulse-core core-two"></div>
+                <span class="pulse-overlay" style="--i: 1"></span>
+                <span class="pulse-overlay" style="--i: 2"></span>
+                <span class="pulse-overlay" style="--i: 3"></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="rules">
+      <div class="rulebook hidden">
+        <button id="cross">X</button>
+        <h1>Game Rules</h1>
+        <ul>
+          <li>
+            Rock beats scissors, scissors beat paper, and paper beats rock.
+          </li>
+          <li>
+            Agree ahead of time whether you’ll count off “rock, paper, scissors,
+            shoot” or just “rock, paper, scissors.”
+          </li>
+          <li>
+            Use rock, paper, scissors to settle minor decisions or simply play
+            to pass the time
+          </li>
+          <li>
+            If both players lay down the same hand, each player lays down
+            another hand
+          </li>
+        </ul>
+      </div>
+      <div class="container">
+        <button class="sub-box" id="togglerulebook">Rules</button>
       </div>
     </div>
     <script src="script.js"></script>
